[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick    = { version = "1.1.2",   default-features = false }
clap            = { version = "4.2.7",   default-features = true,  features = ["derive", "string"] }
color-eyre      = { version = "0.6.2",   default-features = false }
env_logger      = { version = "0.10.0",  default-features = false }
itertools       = { version = "0.12.0",  default-features = false, features = ["use_std"] }
log             = { version = "0.4.17",  default-features = false }
strum           = { version = "0.25",    default-features = false, features = ["derive"] }
