[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick    = { version = "1.1.2",   default-features = false }
clap            = { version = "4.2.7",   default-features = true,  features = ["derive", "string"] }
color-eyre      = { version = "0.6.2",   default-features = false }
env_logger      = { version = "0.10.0",  default-features = false }
itertools       = { version = "0.12.0",  default-features = false, features = ["use_std"] }
log             = { version = "0.4.17",  default-features = false }
prime_factorization = { version = "1.0.4", default-features = true }
#regex            = { version = "1.10.2",  default-features = false }
onig            = { version = "6.4.0", default-features = false}
strum           = { version = "0.25",    default-features = false, features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Binary size reduction tips from: https://github.com/johnthagen/min-sized-rust
strip         = true  # Strip Symbols from Binary
lto           = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

# A profile for compiling for flamegraph visualization
[profile.flamegraph]
inherits = "release"
debug = true
strip = false
